trans.c (gfc_finish_block): Call rationalize_compound_expr for a correct expression.
	* fortran/trans.c (gfc_finish_block): Call rationalize_compound_expr
	for a correct expression.

From-SVN: r71337

--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-12  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
+
+	* fortran/trans.c (gfc_finish_block): Call rationalize_compound_expr
+	for a correct expression.
+
 2003-09-10  Kejia Zhao  <kejia_zh@yahoo.com.cn>
 
 	* trans-intrinsic.c (real_compnt_info): New struct.
