--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-12  Paul Brook  <paul@nowt.org>
+
+	* trans-intrinsic.c (gfc_conv_intrinsic_sign): Call fold.
+
 2003-09-12  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
 
 	* fortran/trans.c (gfc_finish_block): Call rationalize_compound_expr
