--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-09-15  Per Bothner  <pbothner@apple.com>
+
+	* c-common.c (warn_fragment_invalidation):  New "flag" - for
+	now just a macro for !quiet_flag.
+	(cb_enter_fragment, cb_exit_fragmnet):  Be more specific when
+	warning about invalidating a fragment.
+
 2003-09-12  Ziemowit Laski  <zlaski@apple.com>
 
 	* pretty-print.c (pp_construct): Use xcalloc instead of xmalloc
