--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2003-09-16  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/linux.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
+	* config/alpha/linux.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
+	* config/arm/linux-elf.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
+	* config/m68k/linux.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
+	* config/rs6000/linux.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
+	* config/rs6000/linux64.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
+	* config/sh/linux.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
+	* config/sparc/linux.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
+	* config/sparc/linux64.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
+
 2003-09-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/ia64/libgcc-ia64.ver: Export _Unwind_GetBSP@@GCC_3.3.2.
