--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-16  Jason Merrill  <jason@redhat.com>
+	    Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/attr-warn-unused-result.c: New test.
+
 2003-08-26  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20030826-2.c: New test.
