--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,119 @@
+2003-09-14  Alexandre Oliva  <aoliva@redhat.com>
+
+	* cppmain.c (cb_line_change): Revert 2003-08-04's change.
+	* c-lex.c (cb_line_change): Skip line changing whenever
+	cppmain.c would.
+
+2003-09-11  Alexandre Oliva  <aoliva@redhat.com>
+
+	PR fortran/11522
+	* dwarf2out.c (gen_inlined_subroutine_die): Emit abstract function
+	for ultimate origin even if block is abstract.
+
+2003-09-10  Martin Husemann  <martin@duskware.de>
+
+	PR target/11965
+	* config/sparc/sparc.c (sparc_v8plus_shift): Protect against
+	constants greater than 63.
+	* config/sparc/sparc.md (ashlsi3, ashrsi3, lshrsi3): Protect
+	against constants greater than 31.
+	(*ashldi3_sp64, *ashrdi3_sp64, *lshrdi3_sp64): Protect against
+	constants greater than 63.
+
+2003-09-09  Richard Henderson  <rth@redhat.com>
+
+	PR target/12224:
+        * config/ia64/ia64.c (ia64_expand_move): Properly truncate
+        result when op0 is SImode.
+
+2003-09-09  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* configure.in (gcc_cv_as_ix86_cmov_sun_syntax): Check if
+	assembler supports Sun syntax for cmov.
+	* configure: Regenerate.
+	* config.in: Likewise.
+	* config/i386/i386.c: Rename CMOV_SUN_AS_SYNTAX to
+	HAVE_AS_IX86_CMOV_SUN_SYNTAX. 
+	* config/i386/sol2.h (CMOV_SUN_AS_SYNTAX): Remove.
+	Fixes PR target/12101.
+
+2003-09-09  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* configure.in (gcc_cv_as_hidden): Disable unless using GNU ld.
+	* configure: Regenerate.
+
+2003-09-08  Mark Mitchell  <mark@codesourcery.com>
+
+	* mklibgcc.in (libcc.a): Depend on stmp-dirs.
+	(libgov.a): Likewise.
+	(libgcc_eh.a): Likewise.
+
+2003-09-07  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR target/11689
+	* config/i386/i386.c (memory_address_length): Fix computation when
+	the base is esp or ebp.
+
+2003-09-07  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/11852
+	* varasm.c (initializer_constant_valid_p): Correct logic for
+	CONSTRUCTORs.
+
+Sun Sep  7 14:53:36 CEST 2003  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c (try_simplify_condjump): Fix again the preivous patch.
+
+2003-09-07  Christian Ehrhardt  <ehrhardt@mathematik.uni-ulm.de>
+
+	PR optimization/11662
+	Backport from mainline:
+
+	2003-07-10  Denis Chertykov  <denisc@overta.ru>
+	            Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* combine.c (gen_binary): Handle the CLOBBER rtx and
+	don't build a binary operation with it.
+
+Sat Sep  6 23:16:35 CEST 2003  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c (try_simplify_condjump): Fix my previous patch.
+
+	PR target/12070
+	* calls.c (emit_library_call_value_1): Fix saving of BLKmode arguments.
+
+	PR opt/12082
+	* cfgcleanup.c (try_simplify_condjump): Avoid unreachable code warning.
+
+2003-09-06  Steven Bosscher  <steven@gcc.gnu.org>
+
+	PR c/9862
+	* c-decl.c (c_expand_body): Move return warning from here...
+	(finish_function): ...to here.
+
+2003-09-05  Jan Hubicka  <jh@suse.cz>
+
+	PR target/8869
+	* expr.c (convert_modes): Deal properly with integer to vector
+	constant conversion.
+
+2003-09-05  Andrew Pinski <pinskia@physics.uc.edu>
+
+	PR c/10962
+	* c-decl.c (field_decl_cmp): Add back function.
+	(finish_struct): Sort fields if number greater than 15
+	and no anymous structs/unions.
+
+2003-09-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/ia64/libgcc-ia64.ver: Export _Unwind_GetBSP@@GCC_3.3.2.
+	* config/ia64/unwind-ia64.c (_Unwind_GetBSP): New function.
+	* unwind.h (_Unwind_GetBSP): New prototype.
+	* libgcc-std.ver: Add empty GCC_3.3.2 version.
+	* mkmap-symver.awk: For symbol versions with no exported symbols,
+	don't put anything into version script, just change all symbol
+	versions which inherit from it to inherit from its ancestor.
+
 2003-09-08  Jakub Jelinek  <jakub@redhat.com>
 
 	* toplev.c (rest_of_compilation): Call split_all_insns before
@@ -70,16 +186,6 @@
 
 	* builtins.c (expand_builtin_expect_jump): Save pending_stack_adjust
 	and restore it if returning NULL.
-
-2003-09-04  Jakub Jelinek  <jakub@redhat.com>
-
-	* config/ia64/libgcc-ia64.ver: Export _Unwind_GetBSP@@GCC_3.3.2.
-	* config/ia64/unwind-ia64.c (_Unwind_GetBSP): New function.
-	* unwind.h (_Unwind_GetBSP): New prototype.
-	* libgcc-std.ver: Add empty GCC_3.3.2 version.
-	* mkmap-symver.awk: For symbol versions with no exported symbols,
-	don't put anything into version script, just change all symbol
-	versions which inherit from it to inherit from its ancestor.
 
 2003-09-02  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>
 
@@ -495,10 +601,6 @@
 	* unroll.c (loop_iterations): Do not replace a register holding
 	the final value by its equivalent before the loop if it is not
 	invariant.
-
-2003-07-17  Eric Botcazou  <ebotcazou@libertysurf.fr>
-
-	* gcc.c-torture/execute/loop-16.c: New test.
 
 2003-07-21  Ben Elliston  <bje@wasabisystems.com>
 
