--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,75 @@
+2003-09-14  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/3907
+	* g++.dg/parse/template12.C: New test.
+
+2003-09-14  Mark Mitchell  <mark@codesourcery.com>
+
+	* g++.dg/abi/bitfield11.C: New test.
+	* g++.dg/abi/bitfield12.C: Likewise.
+
+2003-09-14  Alexandre Oliva  <aoliva@redhat.com>
+
+	* gcc.dg/cpp/separate-1.c: Adjust line of error.  Test for correct
+	non-expansion of functional macro name without arguments at EOL.
+	* gcc.dg/cpp/spacing1.c: Revert 2003-08-04's change.  Likewise.
+
+2003-09-10  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/ultrasp10.c: New test.
+
+2003-09-08  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/11786
+	* g++.dg/lookup/koenig2.C: New test.
+
+2003-09-08  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/5296
+	* g++.dg/rtti/typeid2.C: New test.
+
+2003-09-07  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* g++.dg/opt/longbranch2.C: New test.
+
+2003-09-07  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR middle-end/11665
+	* gcc.c-torture/compile/20030907-1.c: New test.
+	* g++.dg/init/array11.C: New test.
+
+2003-09-07  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/11852
+	* g++.dg/init/struct1.C: New test.
+
+2003-09-07  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/12181
+	* g++.dg/expr/comma1.C: New test.
+
+2003-09-07  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.c-torture/execute/20030907-1.c: New test.
+
+2003-09-06  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/11867
+	* g++.dg/expr/static_cast5.C: New test.
+
+2003-09-05  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/12163
+	* g++.dg/expr/static_cast4.C: New test.
+
+	PR c++/12146
+	* g++.dg/template/crash9.C: New test.
+
+2003-09-04  Mark Mitchell  <mark@codesourcery.com>
+
+	Revert this patch:
+	* g++.dg/abi/layout4.C: New test.
+	
 2003-09-08  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20030904-1.c: New test.
