--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-15  Alexandre Oliva  <aoliva@redhat.com>
+
+	* cpplib.c (do_pragma): Remove unnecessary cb_line_change.
+
 2003-09-16  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/linux.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
