--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-16  Jakub Jelinek  <jakub@redhat.com>
+
+	* configure.in: Move 2003-09-09 check earlier.
+	* configure: Rebuilt.
+
 2003-09-15  Alexandre Oliva  <aoliva@redhat.com>
 
 	* cpplib.c (do_pragma): Remove unnecessary cb_line_change.
