re PR objc/12309 ([objc-imp] ICE on @implementation after undefined protocol declaration)
[gcc]
2003-09-19  Ziemowit Laski  <zlaski@apple.com>

        PR objc/12309
        * objc/objc-act.c (lookup_and_install_protocols): Exclude missing
        protocols from list instead of returning error_mark_node.

[gcc/testsuite]
2003-09-19  Ziemowit Laski  <zlaski@apple.com>

        PR objc/12262
        * objc.dg/method-12.m: New test.
        PR objc/12309
        * objc.dg/missing-proto-3.m: New test.

From-SVN: r71593

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2003-09-19  Ziemowit Laski  <zlaski@apple.com>
+
+	PR objc/12262
+	* objc.dg/method-12.m: New test.
+	PR objc/12309
+	* objc.dg/missing-proto-3.m: New test.
+
 2003-09-11  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/11788
