--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-09-19  Ziemowit Laski  <zlaski@apple.com>
+
+	PR objc/12309
+	* objc/objc-act.c (lookup_and_install_protocols): Exclude missing
+	protocols from list instead of returning error_mark_node.
+
 2003-09-12  Ziemowit Laski  <zlaski@apple.com>
 
 	* pretty-print.c (pp_construct): Use xcalloc instead of xmalloc
