--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -245,7 +245,7 @@ in the following sections.
 -fdump-tree-original@r{[}-@var{n}@r{]}  @gol
 -fdump-tree-optimized@r{[}-@var{n}@r{]} @gol
 -fdump-tree-inlined@r{[}-@var{n}@r{]} @gol
--fdump-tree-cfg -fdump-tree-dot @gol
+-fdump-tree-cfg -fdump-tree-dot -fdump-tree-alias @gol
 -fdump-tree-ssa@r{[}-@var{n}@r{]} -fdump-tree-pre@r{[}-@var{n}@r{]} @gol
 -fdump-tree-ccp@r{[}-@var{n}@r{]} -fdump-tree-dce@r{[}-@var{n}@r{]} @gol
 -fdump-tree-gimple@r{[}-raw@r{]} -fdump-tree-mudflap@r{[}-@var{n}@r{]} @gol
@@ -3333,9 +3333,6 @@ Enable dumping various statistics about the pass (not honored by every dump
 option).
 @item blocks
 Enable showing basic block boundaries (disabled in raw dumps).
-@item alias
-Enable showing aliasing information for all the variables referenced in
-the program.
 @item vops
 Enable showing virtual operands for every statement.
 @item all
@@ -3374,9 +3371,14 @@ file name is made by appending @file{.dot} to the source file name.
 Dump SSA related information to a file.  The file name is made by appending
 @file{.ssa} to the source file name.
 
+@item alias
+@opindex fdump-tree-alias
+Dump aliasing information for each function.  The file name is made by
+appending @file{.alias} to the source file name.
+
 @item ccp
 @opindex fdump-tree-ccp
-Dump each function before and after CCP.  The file name is made by appending
+Dump each function after CCP.  The file name is made by appending
 @file{.ccp} to the source file name.
 
 @item pre
