--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-20  Richard Henderson  <rth@redhat.com>
+
+        * decl.c, decl2.c, pt.c: Use %J in diagnostics.
+
 2003-09-02  Geoffrey Keating  <geoffk@apple.com>
                                                                                 
 	PR 12161
