--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-20  Richard Henderson  <rth@redhat.com>
+
+        * check-init.c, class.c, decl.c, expr.c: Use %J in diagnostics.
+
 2003-08-13  Tom Tromey  <tromey@redhat.com>
 
 	* gcj.texi (Invoking gij): Document -X and -?.
