--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-23  Richard Henderson  <rth@redhat.com>
+
+        * tree-inline.c (remap_save_expr): Map new save_expr to identity
+        rather than to error_mark_node.
+
 2003-09-20  Richard Henderson  <rth@redhat.com>
 
         * c-format.c (gcc_diag_char_table): Add %J.
