--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,13 @@
+2004-07-14  Daniel Jacobowitz  <dan@debian.org>
+
+	* gcc.dg/format/cmn-err-1.c: New test.
+
+2004-07-13  Daniel Jacobowitz  <dan@debian.org>
+
+	* gcc.dg/pragma-align-2.c: New testcase.
+	* gcc.dg/pragma-init-fini.c: New testcase.
+	* gcc.dg/pragma-align.c: Run test.  Include i?86-solaris2.1[0-9]*.
+
 2004-07-07  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR c++/16276
