--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-08  Chao-ying Fu  <fu@mips.com>
+
+	* fixed-value.h (double-int.h): New include.
+
 2007-05-03  Dirk Mueller  <dmueller@suse.de>
 
 	* doc/invoke.texi (-m386,-m486,-mpentium,-mpentiumpro): Remove.
