Commit the rest of the merge from the last time:
        Merge mainline, revision 124602.

From-SVN: r124642

--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-07  Nathan Froyd  <froydnj@codesourcery.com>
+
+	* libiberty.h (writeargv): Declare.
+
 2007-04-25  Mark Mitchell  <mark@codesourcery.com>
 
 	* demangle.h: Change license to LGPL + exception.
