--- a/libgcc/ChangeLog
+++ b/libgcc/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-10  Richard Sandiford  <richard@codesourcery.com>
+
+	* config.host (sparc-wrs-vxworks): New target.
+
 2007-04-14  Kazu Hirata  <kazu@codesourcery.com>
 
 	* config.host: Recognize fido.
