--- a/libgfortran/ChangeLog
+++ b/libgfortran/ChangeLog
@@ -1,3 +1,29 @@
+2007-05-09  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libfortran/31880
+	* io/unix.c (fd_alloc_r_at): Fix calculation of physical offset.
+
+2007-05-07  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
+
+	PR libfortran/31607
+	* intrinsics/system.c (system_sub): Call flush_all_units.
+	* io/io.h (flush_all_units): Move prototype to libgfortran.h.
+	* libgfortran.h (flush_all_units): Add prototype.
+
+2007-05-06  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libfortran/31201
+	* runtime/error.c (runtime_error_at): New function.
+	(generate_error): Export this function.
+	* gfortran.map: Add _gfortran_generate_error and
+	_gfortran_runtime_error_at.
+	* libgfortran.h: Add comment to reference error codes in front end.
+	(library_start): Locate prototype with library_end macro and add
+	a new comment.  Add prototype for runtime_error_at. Export prototype for
+	generate_error.
+	* io/lock.c (library_start): Fix check for error condition.
+	* io/transfer.c (data_transfer_init): Add library check.
+
 2007-05-04  Daniel Franke  <franke.daniel@gmail.com>
 
 	PR fortran/22359
