--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,138 @@
+2007-05-07  Mark Mitchell  <mark@codesourcery.com>
+
+	* libstdc++-v3/libsupc++/cxxabi.h (_GLIBCXX_NOTHROW): New macro.
+	(__cxa_atexit): Use it.
+
+	* testsuite/lib/libstdc++.exp (v3_target_compile_as_c): For
+	installed-tree testing, search more include directories.
+
+2007-05-08  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/std/type_traits (make_signed): Remove specializations
+	for floating point types.
+	(make_unsigned): Same.
+	* testsuite/20_util/make_signed/requirements/typedefs_neg.cc: Fix.
+	* testsuite/20_util/make_signed/requirements/typedefs-1.cc: Same.
+	* testsuite/20_util/make_signed/requirements/typedefs-2.cc: Same.
+	* testsuite/20_util/make_unsigned/requirements/typedefs_neg.cc: Same.
+	* testsuite/20_util/make_unsigned/requirements/typedefs-1.cc: Same.
+	* testsuite/20_util/make_unsigned/requirements/typedefs-2.cc: Same.
+	
+2007-05-08  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* testsuite/26_numerics/headers/cmath/types_std_c++0x_neg.cc: New.
+
+2007-05-08  Jason Merrill  <jason@redhat.com>
+
+	* libsupc++/cxxabi-internal.h: Remove, to be replaced by...
+	* libsupc++/cxxabi-forced.h: ...this new file.
+	* include/ext/vstring.tcc: Include cxxabi-forced.h instead.
+	* include/bits/istream.tcc: Likewise.
+	* include/bits/ostream.tcc: Likewise.
+	* include/bits/basic_string.tcc: Likewise.
+	* include/bits/ostream_insert.h: Likewise.
+	* include/bits/fstream.tcc: Likewise.
+	* include/std/bitset: Likewise.
+	* libsupc++/cxxabi.h: Restore previous contents.
+	* Makefile.am (headers): Add cxxabi-forced.h.
+	* Makefile.in: Regenerate.
+
+2007-05-08  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* testsuite/util/testsuite_abi.cc: Add CXXABI_1.3.2.
+
+	* libsupc++/cxxabi-internal.h (__foreign_exception::__pure): To
+	__pure_virtual.
+
+2007-05-07  Jason Merrill  <jason@redhat.com>
+
+	* include/bits/ostream.tcc (operator<<(char*)): Add __s.
+
+	* config/abi/pre/gnu.ver: Fix symbol versions.
+	* config/abi/pre/gnu-versioned-namespace.ver: Likewise.
+
+2007-05-07  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* config/os/mingw32/os_defines.h (NOMINMAX): Update comment.
+
+2007-05-07  Jason Merrill  <jason@redhat.com>
+
+	PR c++/28145
+	* libsupc++/cxxabi.h (__forced_unwind, __foreign_exception):
+	New classes.
+	* libsupc++/eh_exception.cc: Define their destructors.
+	* config/abi/pre/gnu.ver: Export their type_infos.
+	* config/abi/pre/gnu-versioned-namespace.ver: Likewise.
+	* libsupc++/eh_personality.cc: A handler for abi::__forced_unwind
+	matches a forced unwind, and a handler for abi::__foreign_exception
+	matches a foreign exception.
+	
+	* include/bits/istream.tcc: Rethrow forced unwind.
+	* include/bits/ostream.tcc: Likewise.
+	* include/bits/ostream_insert.h: Likewise.
+	* include/bits/basic_string.tcc (operator>>, getline): Likewise.
+	* include/bits/fstream.tcc (basic_filebuf::close): Likewise.
+	* include/ext/vstring.cc (operator>>, getline): Likewise.
+	* src/istream.cc: Likewise.
+	* src/compatibility.cc (basic_istream::ignore): Likewise.
+	* include/std/bitset (operator>>): Likewise.
+	* include/std/fstream (basic_filebuf::close): Remove throw() spec.
+	* libsupc++/cxxabi-internal.h: Split out from...
+	* libsupc++/cxxabi.h: ...here.
+
+2007-05-07  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/bits/stl_algobase.h: Do not include <cstring>.
+	(copy(const _Tp*, const _Tp*, _Tp*), __copy_b(const _Tp*, const _Tp*,
+	_Tp*)): Use __builtin_memmove.
+	(__fill_aux): Use __builtin_memset.
+	(equal(const _Tp*, const _Tp*, const _Tp*),
+	lexicographical_compare(const unsigned char*, const unsigned char*,
+	const unsigned char*, const unsigned char*)): Use __builtin_memcmp.
+	* include/bits/valarray_array.h: Do not include <cstring>.
+	(_Array_default_ctor<, true>::_S_do_it): Use __builtin_memset.
+	(_Array_copy_ctor<, true>::_S_do_it, _Array_copier<, true>::_S_do_it):
+	Use __builtin_memcpy.
+	* include/ext/algorithm
+	(__lexicographical_compare_3way(const unsigned char*,
+	const unsigned char*, const unsigned char*, const unsigned char*)):
+	Use __builtin_memcmp.
+	* testsuite/23_containers/vector/requirements/dr438/
+	constructor_1_neg.cc: Adjust dg-error line number.
+	* testsuite/23_containers/vector/requirements/dr438/
+	constructor_2_neg.cc: Likewise.
+
+2007-05-07  Mark Mitchell  <mark@codesourcery.com>
+
+	* testsuite/lib/libstdc++.exp (v3_target_compile_as_c): For
+	installed-tree testing, search more include directories.
+
+	* testsuite/22_locale/num_put/put/char/14220.cc: XFAIL on Solaris
+	2.10.
+	* testsuite/22_locale/num_put/put/wchar_t/14220.cc: Likewise.
+
+	* testsuite/lib/libstdc++.exp (v3_target_compile_as_c): In
+	installed-tree testing, use "remote_exec host", not "remote_exec
+	exec".  Trip trailing newlines from output of -dumpversion and
+	-dumpmachine.
+
+2007-05-07  Benjamin Kosnik  <bkoz@redhat.com>
+            Howard Hinnant  <hhinnant@apple.com>
+
+	* include/std/type_traits: (make_signed, make_unsigned): Adjust
+	for enum sizes.	
+	* testsuite/20_util/make_unsigned/requirements/typedefs.cc: Move to...
+	* testsuite/20_util/make_unsigned/requirements/typedefs-1.cc: ...here.
+	* testsuite/20_util/make_unsigned/requirements/typedefs-2.cc: Add,
+	compile with -funsigned-char -fshort-enums.
+	* testsuite/20_util/make_signed/requirements/typedefs.cc: Move to...
+	* testsuite/20_util/make_signed/requirements/typedefs-1.cc: ...here.
+	* testsuite/20_util/make_signed/requirements/typedefs-2.cc: Add,
+	compile with -funsigned-char -fshort-enums.
+
+	* testsuite/20_util/headers/type_traits/types_std_c++0x_neg.cc:
+	Add a temporary xfail to this test for all platforms.
+	
 2007-05-06  Paolo Carlini  <pcarlini@suse.de>
 
 	* include/std/complex: Add missing extern template declarations.
